--- a/catdog/templates/base.html
+++ b/catdog/templates/base.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block title %}
     {% if title %}
-    <title>Про Flask - {{ title }}</title>
+    <title>Котопес - {{ title }}</title>
     {% else %}
-    <title>Про Flask</title>
+    <title>Котопес</title>
     {% endif %}
     {% endblock %}
 </head>
@@ -24,7 +24,7 @@
     {% if title %}
     <h1>{{ title }}</h1>
     {% else %}
-    <h1>Про Flask</h1>
+    <h1>Котопес</h1>
     {% endif %}
 {% endblock %}
 </div>
