--- a/catdog/templates/cat.html
+++ b/catdog/templates/cat.html
@@ -3,4 +3,15 @@
 {% block content %}
 {{ super () }}
 <img src="static/cat.jpg">
+<hr>
+<h2>Сообщения</h2>
+<ul>
+    {% for p in posts %}
+    {% if p.receiver == 'Коту' %}
+    <li>
+        <div class="annonce">{{ p.text[:240]|striptags }}</div>
+    </li>
+    {% endif %}
+    {% endfor %}
+</ul>
 {% endblock %}
