--- a/catdog/templates/index.html
+++ b/catdog/templates/index.html
@@ -3,4 +3,14 @@
 {% block content %}
 {{ super () }}
 <img src="static/catdog.jpg">
+<hr>
+<h2>Сообщения</h2>
+<ul>
+    {% for p in posts %}
+    <li>
+        <p class="receiver">{{ p.receiver }}</p>
+        <div class="annonce">{{ p.text[:240]|striptags }}</div>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
