--- a/flsk/static/css/style.css
+++ b/flsk/static/css/style.css
@@ -2,6 +2,8 @@ body{
     background: cadetblue;
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: sienna;
 }
 .menu{
     display: flex;
@@ -22,11 +24,50 @@ body{
     padding: 10px;
 }
 .flash.success{
-    border: 1px solid darkolivegreen;
+    border: 1px solid darkseagreen;
     background: darkseagreen;
 }
 
 .flash.error{
-    border: 1px solid darkred;
+    border: 1px solid indianred;
     background: indianred;
 }
+
+.menu a{
+    font-weight: bold;
+    color: Sienna;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+p>a{
+    text-decoration: none;
+    padding: 0;
+}
+li>div{
+    padding: 10px 20px;
+}
+li>p, li div{
+    border: 1px solid Sienna;
+      
+}
+p.title{
+    margin: 0;
+    font-weight: bold;
+    background: burlywood;
+}
+p.title a{
+    display: block;
+    padding: 10px 20px;
+    color: Sienna
+}
+p.title:hover{
+    background: Peru;
+}
+.annonce{
+    margin-top: -1px;
+    margin-bottom: 40px;
+    background: PapayaWhip;
+    }
